immich/Middleware-immich-geoblock-es-cu.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app: immich
  name: immich-geoblock-es-cu
  namespace: media
spec:
  plugin:
    geoblock:
      allowLocalRequests: false
      allowUnknownCountries: false
      api: https://get.geojs.io/v1/ip/country/{ip}
      apiTimeoutMs: "500"
      cacheSize: "1024"
      countries:
      - ES
      - CU
      forceMonthlyUpdate: true
      logAllowedRequests: true
      logApiRequests: true
      logLocalRequests: true
      silentStartUp: false
      unknownCountryApiResponse: nil
