immich/Deployment-immich-machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich
  name: immich-machine-learning
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: immich-machine-learning
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: immich-machine-learning
    spec:
      containers:
      - env:
        - name: PYTHONUNBUFFERED
          valueFrom:
            configMapKeyRef:
              key: PYTHONUNBUFFERED
              name: immich-machine-learning-config-env
        - name: TRANSFORMERS_CACHE
          valueFrom:
            configMapKeyRef:
              key: TRANSFORMERS_CACHE
              name: immich-machine-learning-config-env
        image: ghcr.io/immich-app/immich-machine-learning:v3.2.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 3003
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: immich-machine-learning
        ports:
        - containerPort: 3003
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 3003
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 4000m
            memory: 6Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /ping
            port: 3003
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /cache
          name: model-cache
      enableServiceLinks: false
      volumes:
      - hostPath:
          path: /data/immich/ml-cache
        name: model-cache
