immich/Deployment-immich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich
  name: immich
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: immich
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: immich
    spec:
      containers:
      - env:
        - name: DB_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: DB_HOSTNAME
              name: immich-config-env
        - name: DB_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DB_USERNAME
              name: immich-config-env
        - name: IMMICH_CONFIG_FILE
          valueFrom:
            configMapKeyRef:
              key: IMMICH_CONFIG_FILE
              name: immich-config-env
        - name: IMMICH_LOG_FORMAT
          valueFrom:
            configMapKeyRef:
              key: IMMICH_LOG_FORMAT
              name: immich-config-env
        - name: IMMICH_PORT
          valueFrom:
            configMapKeyRef:
              key: IMMICH_PORT
              name: immich-config-env
        - name: IMMICH_TELEMETRY_INCLUDE
          valueFrom:
            configMapKeyRef:
              key: IMMICH_TELEMETRY_INCLUDE
              name: immich-config-env
        - name: REDIS_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: REDIS_HOSTNAME
              name: immich-config-env
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: immich-shared-sealed-secret
        image: ghcr.io/immich-app/immich-server:v3.2.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: 2283
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: immich
        ports:
        - containerPort: 2283
          name: server
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: 2283
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /api/server/ping
            port: 2283
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: upload
        - mountPath: /app/config
          name: merged-config
          readOnly: true
      volumes:
      - hostPath:
          path: /cold-data/immich/upload
        name: upload
      - configMap:
          name: config-json
        name: config-json
      - emptyDir: {}
        name: merged-config
