immich/Service-immich-machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich
    name: immich-machine-learning
  name: immich-machine-learning
  namespace: media
spec:
  ports:
  - name: immich-machine-learning-http
    port: 3003
    targetPort: 3003
  selector:
    name: immich-machine-learning
