immich/Service-immich.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8081"
    prometheus.io/scrape: "true"
  labels:
    app: immich
    name: immich
  name: immich
  namespace: media
spec:
  ports:
  - name: immich-server
    port: 2283
    targetPort: 2283
  selector:
    name: immich
