immich/IngressRoute-immich-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: immich
  name: immich-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`photos.danielramos.me`)
    middlewares:
    - name: immich-geoblock-es-cu
    services:
    - name: immich
      port: 2283
  - kind: Rule
    match: Host(`photos.danielramos.me`) && PathPrefix(`/api/auth`)
    middlewares:
    - name: immich-geoblock-es-cu
    - name: immich-auth-ratelimit
    services:
    - name: immich
      port: 2283
  tls:
    store:
      name: default
